# FYP

./: .env.example  .gitignore  package-lock.json  package.json
fyp-backend/: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  dev.db  pyproject.toml  requirements.txt  test.db  tmp_test.db
fyp-backend/.github/: copilot-instructions.md
fyp-backend/app/: config.py  database.py  main.py
fyp-backend/scripts/: add_subject_skill_mapping.py  build_major_skill_from_esco.py  create_admin.py  create_education_tables_mysql.py  create_orm_tables.py  find_columns.py  find_mysql_text_value.py  inspect_current_schema.py  inspect_major_occupation_join.py  inspect_major_program_ranking_tables.py  inspect_major_program_tables.py  inspect_mysql_ml_tables.py  inspect_table_columns.py  make_zip.ps1  mysql_import_major_occ_map.py  mysql_import_ml_metadata.py  mysql_ml_metadata_ddl.sql  mysql_recommendation_tracking_ddl.sql  orm_info.py  seed_dataset_content.py  seed_education_subject_skill_map.py  seed_education_subjects.py  smoke_derived_major_skills.py  smoke_ml_recommend_db.py  verify_endpoints.py  verify_mysql.py
fyp-backend/tests/: conftest.py  test_admin_and_selection.py  test_api_nlp_extract_alias.py  test_api_recommend_jobs_compat.py  test_auth.py  test_education_subjects.py  test_job_detail_with_major.py  test_job_id_url_path_params.py  test_job_majors_by_occupation_uri.py  test_job_search.py  test_major_programs_endpoint.py  test_major_programs_never_none.py  test_ml_recommend_smoke.py  test_pathway_summary_api.py  test_profile_and_pick_endpoints.py  (+5 more)
(+190 files in other folders)
